--- a/dao-charter.mdx
+++ b/dao-charter.mdx
@@ -32,3 +32,6 @@ Nothing contained in this Charter is intended to create or should be construed a
 Neither the Community nor any Token Holder shall have any liability for the obligations or liabilities of the Company, and nothing contained in this Charter is intended to create or should be construed as creating any responsibility or liability of the Community or any Token Holder.  To the fullest extent permitted by law, neither the Community nor any Token Holder (in such person’s capacity as such) shall owe or have any fiduciary duties to the Company or to the Sole Member, and the Company and the Sole Member each waives any such fiduciary duties.
 
 Except as otherwise provided herein, in the event of any conflict between the terms of this Charter and the Limited Liability Company Agreement of the Company (the “LLC Agreement”), the Charter will prevail and the Sole Member will forthwith cause any necessary alterations to be made to the LLC Agreement so as to resolve the conflict.
+
+## Schedule A
+The Sole Member hereby delegates in perpetuity to the Community (i) the sole right to decrease the Community’s powers in any material adverse fashion; provided, however, that the Sole Member may increase the powers of the Community at any time and from time to time in its sole and absolute discretion, (ii) the sole right to manage and profit from the treasury of the Community (the “Treasury”), including, without limitation, expending, investing or otherwise possessing the Treasury and (iii) the sole right to manage and profit from any staking platform created in the future by the Community.
