--- a/token-website-terms.mdx
+++ b/token-website-terms.mdx
@@ -9,50 +9,49 @@ We provide access to our Website subject to the following Terms of Use, which ma
 
 Capitalized terms not defined in these Terms of Use shall have the meaning set forth in our Privacy Policy.
 
-If you would like to receive or purchase $WEN Tokens, please see our $WEN Tokens Issuance Terms and Conditions, which are available here.  Your receipt or purchase of $WEN Token is governed by the $WEN Tokens Issuance Terms and Conditions.
-
+If you would like to receive or purchase WEN tokens, please see our WEN Tokens Issuance Terms and Conditions, which are available here - [https://docs.wentoken.org/staking-terms].  Your receipt or purchase of WEN Token is governed by the WEN Tokens Issuance Terms and Conditions. 
 
 **THE SECTIONS BELOW TITLED “BINDING ARBITRATION” AND “CLASS ACTION WAIVER” CONTAIN A BINDING ARBITRATION AGREEMENT AND CLASS ACTION WAIVER.  THEY AFFECT YOUR LEGAL RIGHTS. PLEASE READ THEM.**
 
 We reserve the right, in our sole and absolute discretion, to deny you access to the Website, or any portion of the Website, without notice and without reason.
 
-## 1.	COMMUNITY GUIDELINES
+## 1. COMMUNITY GUIDELINES
 
-WEN Token’s community, like any community, functions best when its people follow a few simple rules.  By accessing and/or using the Website, you hereby agree to comply with these community rules and that:
+WEN Token’s community, like any community, functions best when its people follow a few simple rules.  By accessing and/or using the Website, you hereby agree to comply with these community rules and that:  
 
-+ You will not use the Website for any unlawful purpose;
+	- You will not use the Website for any unlawful purpose;
 
-+ You will not submit false or misleading information;
+	- You will not submit false or misleading information;
 
-+ You will not use the Website to engage in any other commercial activities, including, without limitation, raising money; advertising or promoting a product, service, or company; or engaging in any pyramid or other multi-tiered marketing scheme;
+	- You will not use the Website to engage in any other commercial activities, including, without limitation, raising money; advertising or promoting a product, service, or company; or engaging in any pyramid or other multi-tiered marketing scheme;
 
-+ You will not access or use the Website to collect any market research for a competing business;
+	- You will not access or use the Website to collect any market research for a competing business;
 
-+ You will not upload, post, e-mail, transmit, or otherwise make available any content that:
+	- You will not upload, post, e-mail, transmit, or otherwise make available any content that:
 
-	- infringes any copyright, trademark, right of publicity, or other proprietary rights or confidential information of any person or entity; or
-	
-	- is threatening, tortious, defamatory, libelous, indecent, obscene, pornographic, invasive of another’s privacy, or promotes violence; or
-	
-	- discloses any sensitive information about another person, including that person’s e-mail address, postal address, phone number, credit card information, or any similar information;
+		- infringes any copyright, trademark, right of publicity, or other proprietary rights or confidential information of any person or entity; or
 
-+ You will not “stalk” or otherwise harass another; 
+		- is threatening, tortious, defamatory, libelous, indecent, obscene, pornographic, invasive of another’s privacy, or promotes violence; or
 
-+ You will not impersonate any person or entity or falsely state or otherwise misrepresent your affiliation with a person or entity; 
+		- discloses any sensitive information about another person, including that person’s e-mail address, postal address, phone number, credit card information, or any similar information;
 
-+ You will not interfere with or attempt to interrupt the proper operation of the Website through the use of any virus, device, information collection or transmission mechanism, software or routine, or access or attempt to gain access to any data, files, or passwords related to the Website through hacking, password or data mining, or any other means.
+	- You will not “stalk” or otherwise harass another; 
 
-+ You will not cover, obscure, block, or in any way interfere with any advertisements and/or safety features (e.g., report abuse button) on the Website;   
+	- You will not impersonate any person or entity or falsely state or otherwise misrepresent your affiliation with a person or entity; 
 
-+ You will not use any robot, spider, scraper, or other automated means to access the Website for any purpose without our express written permission; provided, however, we grant the operators of public search engines permission to use spiders to copy materials from the Website for the sole purpose of, and solely to the extent necessary for, creating publicly-available searchable indices of the materials, but not caches or archives of such materials; and
+	- You will not interfere with or attempt to interrupt the proper operation of the Website or WEN tokens through the use of any virus, device, information collection or transmission mechanism, software or routine, or access or attempt to gain access to any data, files, or passwords related to the Website or WEN tokens through hacking, password or data mining, or any other means.
 
-+ You will not take any action that imposes or may impose (in our sole discretion) an unreasonable or disproportionately large load on our technical infrastructure.
+	- You will not cover, obscure, block, or in any way interfere with any advertisements and/or safety features (e.g., report abuse button) on the Website;   
+
+	- You will not use any robot, spider, scraper, or other automated means to access the Website for any purpose without our express written permission; provided, however, we grant the operators of public search engines permission to use spiders to copy materials from the Website for the sole purpose of, and solely to the extent necessary for, creating publicly-available searchable indices of the materials, but not caches or archives of such materials; and
+
+	- You will not take any action that imposes or may impose (in our sole discretion) an unreasonable or disproportionately large load on our technical infrastructure. 
 
 Please let us know about inappropriate content. If you find something that violates our community guidelines, let us know, and we’ll review it.  We reserve the right, in our sole and absolute discretion, to deny you access to the Website, or any portion of the Website, without notice.
 
-## 4. INTELLECTUAL PROPERTY 
+## 4. INTELLECTUAL PROPERTY
 
-The Website contains material, such as software, text, graphics, images, sound recordings, audiovisual works, and other material provided by or on behalf of WEN Token (collectively referred to as the “Content”).  The Content may be owned by us or by third parties, including our other users.  The Content is protected under Canadian, United States, and other foreign laws.  Unauthorized use of the Content may violate copyright, trademark, and other laws.  You have no rights in or to the Content (other than your own User Content), and you will not use the Content except as permitted under this Agreement.  No other use is permitted without prior written consent from us.  You must retain all copyright and other proprietary notices contained in the original Content on any copy you make of the Content.  You may not sell, transfer, assign, license, sublicense, or modify the Content or reproduce, display, publicly perform, make a derivative version of, distribute, or otherwise use the Content in any way for any public or commercial purpose.  The use or posting of the Content on any other website or in a networked computer environment for any purpose is expressly prohibited. 
+The Website contains material, such as software, text, graphics, images, sound recordings, audiovisual works, and other material provided by or on behalf of WEN Token (collectively referred to as the “Content”).  The Content may be owned by us or by third parties, including our other users.  The Content is protected under United States and other foreign laws.  Unauthorized use of the Content may violate copyright, trademark, and other laws.  You have no rights in or to the Content (other than your own User Content), and you will not use the Content except as permitted under this Agreement.  No other use is permitted without prior written consent from us.  You must retain all copyright and other proprietary notices contained in the original Content on any copy you make of the Content.  You may not sell, transfer, assign, license, sublicense, or modify the Content or reproduce, display, publicly perform, make a derivative version of, distribute, or otherwise use the Content in any way for any public or commercial purpose.  The use or posting of the Content on any other website or in a networked computer environment for any purpose is expressly prohibited. 
 
 If you violate any part of this Agreement, your permission to access and/or use the Content and the Website automatically terminates and you must immediately destroy any copies you have made of the Content.
 
@@ -64,7 +63,6 @@ Elements of the Website are protected by trade dress, trademark, unfair competit
 
 As noted above, although the Website may allow you to communicate with us and other users, we do not want you to, and you should not, submit any information that contains confidential information.  With respect to all communications you send to us concerning WEN Token or our Website, including, but not limited to, feedback, questions, comments, suggestions, and the like, we shall be free to use any ideas, concepts, know-how, or techniques contained in your communications for any purpose whatsoever, including, but not limited to, the development, production, and marketing of products and services that incorporate such information without compensation or attribution to you.
 
-
 ## 6. NO WARRANTIES; LIMITATION OF LIABILITY
 
 AS NOTED ABOVE, WE MAKE NO WARRANTIES OR REPRESENTATIONS ABOUT THE CONTENTS OF THE WEBSITE.  WE SHALL NOT BE SUBJECT TO LIABILITY FOR ANY DELAYS OR INTERRUPTIONS OF THE WEBSITE FROM WHATEVER CAUSE.  YOU AGREE THAT YOU USE THE CONTENT AND THE WEBSITE AT YOUR OWN RISK.    
@@ -73,10 +71,10 @@ WE DO NOT WARRANT THAT THE WEBSITE WILL OPERATE ERROR-FREE OR THAT THE WEBSITE, 
 
 THE CONTENT AND THE WEBSITE ARE PROVIDED ON AN “AS IS” AND “AS AVAILABLE” BASIS WITHOUT ANY WARRANTIES OF ANY KIND.  WE DISCLAIM ALL WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE WARRANTY OF TITLE, MERCHANTABILITY, NON-INFRINGEMENT OF THIRD PARTIES’ RIGHTS, AND FITNESS FOR PARTICULAR PURPOSE. 
 
-IN CONNECTION WITH ANY WARRANTY, CONTRACT, OR COMMON LAW TORT CLAIMS: (I) WE SHALL NOT BE LIABLE FOR ANY INCIDENTAL OR CONSEQUENTIAL DAMAGES, LOST PROFITS, OR DAMAGES RESULTING FROM LOST DATA OR BUSINESS INTERRUPTION RESULTING FROM THE USE OR INABILITY TO ACCESS AND USE THE WEBSITE OR THE CONTENT, EVEN IF WE HAVE BEEN ADVISED OF THE POSSIBILITY OF SUCH DAMAGES; AND (II) ANY DIRECT DAMAGES THAT YOU MAY SUFFER AS A RESULT OF YOUR USE OF THE WEBSITE OR THE CONTENT, SHALL BE LIMITED TO ONE HUNDRED DOLLARS ($100).
-THE WEBSITE MAY CONTAIN TECHNICAL INACCURACIES OR TYPOGRAPHICAL ERRORS OR OMISSIONS. WE ARE NOT RESPONSIBLE FOR ANY SUCH TYPOGRAPHICAL, TECHNICAL, OR PRICING ERRORS LISTED ON THE WEBSITE.  WE RESERVE THE RIGHT TO MAKE CHANGES, CORRECTIONS, AND/OR IMPROVEMENTS TO THE WEBSITE AT ANY TIME WITHOUT NOTICE. 
+IN CONNECTION WITH ANY WARRANTY, CONTRACT, OR COMMON LAW TORT CLAIMS: (I) WE SHALL NOT BE LIABLE FOR ANY INCIDENTAL OR CONSEQUENTIAL DAMAGES, LOST PROFITS, OR DAMAGES RESULTING FROM LOST DATA OR BUSINESS INTERRUPTION RESULTING FROM THE USE OR INABILITY TO ACCESS AND USE THE WEBSITE OR THE CONTENT, EVEN IF WE HAVE BEEN ADVISED OF THE POSSIBILITY OF SUCH DAMAGES; AND (II) ANY DIRECT DAMAGES THAT YOU MAY SUFFER AS A RESULT OF YOUR USE OF THE WEBSITE OR THE CONTENT, SHALL BE LIMITED TO ONE HUNDRED DOLLARS ($100). THE WEBSITE MAY CONTAIN TECHNICAL INACCURACIES OR TYPOGRAPHICAL ERRORS OR OMISSIONS. WE ARE NOT RESPONSIBLE FOR ANY SUCH TYPOGRAPHICAL, TECHNICAL, OR PRICING ERRORS LISTED ON THE WEBSITE.  WE RESERVE THE RIGHT TO MAKE CHANGES, CORRECTIONS, AND/OR IMPROVEMENTS TO THE WEBSITE AT ANY TIME WITHOUT NOTICE. 
 
 NO MATERIAL AVAILABLE THROUGH THE WEBSITE SHALL BE USED OR CONSIDERED AS AN OFFER TO SELL OR A SOLICITATION OF ANY OFFER TO BUY THE SECURITIES OR PRODUCTS OR SERVICES OF ANY ENTITY.  THE WEBSITE PROVIDES NO INVESTMENT OR OTHER ADVICE, AND NO INFORMATION OR MATERIAL AVAILABLE THROUGH THE WEBSITE IS TO BE RELIED UPON FOR THE PURPOSE OF MAKING OR COMMUNICATING INVESTMENT OR OTHER DECISIONS.  WE DO NOT ADVISE ON THE TAX CONSEQUENCES OF ANY TRANSACTION.  TO THE EXTENT THAT PAST PERFORMANCE IS AVAILABLE THROUGH THE WEBSITE, PAST PERFORMANCE IS NOT INDICATIVE OF FUTURE RESULTS, AND NO REPRESENTATION IS BEING MADE THAT ANY TRANSACTION WILL OR IS LIKELY TO ACHIEVE PROFITS OR LOSSES SIMILAR TO THOSE ACHIEVED IN THE PAST, OR THAT SIGNIFICANT LOSSES WILL BE AVOIDED.
+
 
 ## 7. EXTERNAL SITES
 
@@ -102,14 +100,16 @@ In the event of a dispute arising under or relating to this Agreement, or any ot
 
 You agree that any arbitration or proceeding shall be limited to the Dispute between us and you individually. To the full extent permitted by law, (i) no arbitration or proceeding shall be joined with any other; (ii) there is no right or authority for any Dispute to be arbitrated or resolved on a class action-basis or to utilize class action procedures; and (iii) there is no right or authority for any Dispute to be brought in a purported representative capacity on behalf of the general public or any other persons. YOU AGREE THAT YOU MAY BRING CLAIMS AGAINST US ONLY IN YOUR INDIVIDUAL CAPACITY AND NOT AS A PLAINTIFF OR CLASS MEMBER IN ANY PURPORTED CLASS OR REPRESENTATIVE PROCEEDING.
 
+
 ## 13. EQUITABLE RELIEF
 
-You acknowledge and agree that in the event of a breach or threatened violation of our intellectual property rights and confidential and proprietary information by you, we will suffer irreparable harm and will therefore be entitled to injunctive relief to enforce this Agreement. We may, without waiving any other remedies under this Agreement, seek from any court having jurisdiction any interim, equitable, provisional, or injunctive relief that is necessary to protect our rights and property pending the outcome of the arbitration referenced above. You hereby irrevocably and unconditionally consent to the personal and subject matter jurisdiction of the courts in Ontario for purposes of any such action by us.
+You acknowledge and agree that in the event of a breach or threatened violation of our intellectual property rights and confidential and proprietary information by you, we will suffer irreparable harm and will therefore be entitled to injunctive relief to enforce this Agreement. We may, without waiving any other remedies under this Agreement, seek from any court having jurisdiction any interim, equitable, provisional, or injunctive relief that is necessary to protect our rights and property pending the outcome of the arbitration referenced above. You hereby irrevocably and unconditionally consent to the personal and subject matter jurisdiction of the courts in state of Delaware for purposes of any such action by us.
 
 ## 14. MISCELLANEOUS  
 
-These Terms of Service and any action related thereto will be governed by the laws of the State of New York without regard to its conflict of laws provisions.  Proceedings commenced by us to protect our intellectual property or confidential information shall be brought in the state or federal courts located in the State of New York.
+These Terms of Service and any action related thereto will be governed by the laws of the State of Delaware without regard to its conflict of laws provisions.  Proceedings commenced by us to protect our intellectual property or confidential information shall be brought in the state or federal courts located in the State of Delaware.
 
 Our failure to act on or enforce any provision of these Terms of Use shall not be construed as a waiver of that provision or any other provision in these Terms of Use. No waiver shall be effective against us unless made in writing, and no such waiver shall be construed as a waiver in any other or subsequent instance.  
 
-Except as expressly agreed by us and you in writing, these Terms of Use, together with our Privacy Policy constitutes the entire agreement between you and us, and supersedes all previous or contemporaneous agreements, whether written or oral, between you and us, with respect to the subject matter hereof.  The section headings are provided merely for convenience and shall not be given any legal import.  These Terms of Use will inure to the benefit of our successors, assigns, licensees, and sublicensees.  
+Except as expressly agreed by us and you in writing, these Terms of Use, together with our Privacy Policy constitutes the entire agreement between you and us, and supersedes all previous or contemporaneous agreements, whether written or oral, between you and us, with respect to the subject matter hereof.  The section headings are provided merely for convenience and shall not be given any legal import.  These Terms of Use will inure to the benefit of our successors, assigns, licensees, and sublicensees.
+  
