--- a/dao-charter.mdx
+++ b/dao-charter.mdx
@@ -3,23 +3,26 @@ title: "Community Charter"
 description: "This is the Community Charter for WEN DAO"
 ---
 
-This is the Charter (the “Charter”) of the Community (the “Community”) of WEN Token, LLC, a Delaware limited liability company (the “Company”), effective as of May 5, 2023.
+This is the Charter (the “Charter”) of the Community (the “Community”) of WEN DAO, LLC, a Delaware limited liability company (the “Company”), effective as of May 5, 2023.
+
 
 ## Purpose
 
-The sole member of the Company (the “Sole Member”) has formed the Community and by signing below has approved this Charter for the purpose of providing certain governance rights to the holders (the “Token Holders”) of [tokens] (“Tokens”).
+The sole member of the Company (the “Sole Member”) has formed the Community and by signing below has approved this Charter for the purpose of providing certain governance rights to the holders (the “Token Holders”) of WEN tokens (“Tokens”).
 
 ## Membership
 
 The members of the Community will be comprised of the Token Holders.
 
-## Authority
+##Authority
 
 The Community has the right and authority to vote on, approve, and reject the matters set forth on Schedule A.
 
 ## Voting
 
-Voting by the Community shall be conducted on an as needed basis as determined by the Token Holders.  The vote of Token Holders holding a majority of the Tokens shall be required to approve any matter set forth on Schedule A.  For the avoidance of doubt, the Company must carry out any approval or rejection made by the Committee with respect to any matter set forth on Schedule A.
+Voting by the Community shall be conducted on an as needed basis as determined by the Token Holders.  The vote of Token Holders holding (i) a Community approved percentage for quorum, which shall initially be determined by the Sole Member in its sole discretion and (ii) a majority of a quorum is required for any effective action of the Community hereunder. 
+
+A majority of the Tokens shall be required to approve any matter set forth on Schedule A.  For the avoidance of doubt, the Company must carry out any approval or rejection made by the Committee with respect to any matter set forth on Schedule A.
 
 ## Miscellaneous
 
