--- a/constitution.mdx
+++ b/constitution.mdx
@@ -1,6 +1,6 @@
 ---
-title: "Community Charter"
-description: "This is the Community Charter for WEN DAO"
+title: "WEN DAO Constitution"
+description: "This is the Constitution for WEN DAO"
 ---
 
 This is the Charter (the “Charter”) of the Community (the “Community”) of WEN DAO, LLC, a Delaware limited liability company (the “Company”), effective as of May 5, 2023.
