--- a/privacy.mdx
+++ b/privacy.mdx
@@ -1,9 +1,9 @@
 ---
 title: "Privacy Policy"
-description: "This is the Privacy Policy for WEN Staking"
+description: "This is the Privacy Policy for WEN Token"
 ---
 
-We at WEN Staking, LLC (“WEN Staking,” “we,” “us,” or “our”) have created this privacy policy (this “Privacy Policy”) because we know that you care about how information you provide to us is used and shared.  This Privacy Policy relates to the information collection and use practices of WEN Staking in connection with our Website and $WEN Token Staking.     
+We at WEN Token, LLC (“WEN Token,” “we,” “us,” or “our”) have created this privacy policy (this “Privacy Policy”) because we know that you care about how information you provide to us is used and shared.  This Privacy Policy relates to the information collection and use practices of WEN Token in connection with our Website and $WEN Token Staking.     
 
 By visiting our Website, and/or participating in $WEN Token Staking, you are agreeing to the terms of this Privacy Policy and the accompanying Terms of Use [add link].  
 
@@ -12,7 +12,7 @@ Capitalized terms not defined in this Privacy Policy shall have the meaning set 
 	
 ## The Information We Collect and/or Receive
 
-In the course of operating the Website and/or interacting with you, WEN Staking will collect (and/or receive) the following types of information. You authorize us to collect and/or receive such information. 
+In the course of operating the Website and/or interacting with you, WEN Token will collect (and/or receive) the following types of information. You authorize us to collect and/or receive such information. 
 
 ### 1. Contact Information
 
@@ -39,7 +39,7 @@ For more information on Google Analytics, including how to opt out from certain 
 
 ## Accessing and Modifying Information and Communication Preferences
 
-You may manage your receipt of marketing and non-transactional communications by clicking on the “unsubscribe” link located on the bottom of any WEN Staking marketing e-mail.  We will use commercially reasonable efforts to process such requests in a timely manner.  You should be aware, however, that it is not always possible to completely remove or modify information in our subscription databases.  Users cannot opt out of receiving transactional e-mails related to their transactions with WEN Staking.
+You may manage your receipt of marketing and non-transactional communications by clicking on the “unsubscribe” link located on the bottom of any WEN Token marketing e-mail.  We will use commercially reasonable efforts to process such requests in a timely manner.  You should be aware, however, that it is not always possible to completely remove or modify information in our subscription databases.  Users cannot opt out of receiving transactional e-mails related to their transactions with WEN Token.
 
 
 ## How We Use and Share the Information   
@@ -50,13 +50,13 @@ You also authorize us to use and/or share Information as described below.
 
 	- We may employ other companies and individuals to perform functions on our behalf.  Examples may include providing technical assistance, customer service, and marketing assistance.  These other companies will have access to the Information only as necessary to perform their functions and to the extent permitted by law.
 
-	- In an ongoing effort to better understand users of our Website, and the products and services of WEN Staking and our promotional partners, we may analyze certain Information in anonymized and aggregate form in order to operate, maintain, manage, and improve the Website and/or such products and services.  This aggregate information does not identify you personally.  We may share this aggregate data to our affiliates, agents, business and promotional partners, and other third parties.  We may also disclose aggregated user statistics in order to describe the Website and these products and services to current and prospective business partners and investors and to other third parties for other lawful purposes.
+	- In an ongoing effort to better understand users of our Website, and the products and services of WEN Token and our promotional partners, we may analyze certain Information in anonymized and aggregate form in order to operate, maintain, manage, and improve the Website and/or such products and services.  This aggregate information does not identify you personally.  We may share this aggregate data to our affiliates, agents, business and promotional partners, and other third parties.  We may also disclose aggregated user statistics in order to describe the Website and these products and services to current and prospective business partners and investors and to other third parties for other lawful purposes.
 
 	- We may share some or all of your Information with any of our parent companies, subsidiaries, joint ventures, or other companies under common control with us.
 
 	- As we develop our businesses, we might sell or buy businesses or assets.  In the event of a corporate sale, merger, reorganization, sale of assets, dissolution, or similar event, the Information may be part of the transferred assets.
 
-	- To the extent permitted by law, we may also disclose the Information: (i) when required by law, court order, or other government or law enforcement authority or regulatory agency; or (ii) whenever we believe that disclosing such Information is necessary or advisable, for example, to protect the rights, property, or safety of WEN Staking or others.
+	- To the extent permitted by law, we may also disclose the Information: (i) when required by law, court order, or other government or law enforcement authority or regulatory agency; or (ii) whenever we believe that disclosing such Information is necessary or advisable, for example, to protect the rights, property, or safety of WEN Token or others.
 
 
 
@@ -70,7 +70,7 @@ The Website and its servers are operated in United States.   Please be aware tha
 
 ## External Websites
 
-The Website may contain links to third-party websites.  WEN Staking has no control over the privacy practices or the content of these websites.  As such, we are not responsible for the content or the privacy policies of those third-party websites.  You should check the applicable third-party privacy policy and terms of use when visiting any other websites.
+The Website may contain links to third-party websites.  WEN Token has no control over the privacy practices or the content of these websites.  As such, we are not responsible for the content or the privacy policies of those third-party websites.  You should check the applicable third-party privacy policy and terms of use when visiting any other websites.
 
 ## Children 
 
@@ -78,9 +78,9 @@ We do not knowingly collect personal information from children under the age of 
 
 ## California Residents
 
-Under California Civil Code Section 1798.83, California residents who have an established business relationship with WEN Staking may choose to opt out of our sharing your Personal Information with third parties for direct marketing purposes.  If you are a California resident and (1) you wish to opt out; or (2) you wish to request certain information regarding our disclosure of your Personal Information to third parties for the direct marketing purposes, please send an e-mail to info@wentoken.org with “Privacy Policy” in the subject line.
+Under California Civil Code Section 1798.83, California residents who have an established business relationship with WEN Token may choose to opt out of our sharing your Personal Information with third parties for direct marketing purposes.  If you are a California resident and (1) you wish to opt out; or (2) you wish to request certain information regarding our disclosure of your Personal Information to third parties for the direct marketing purposes, please send an e-mail to info@wentoken.org with “Privacy Policy” in the subject line.
 
-In addition, WEN Staking does not monitor, recognize, or honor any opt-out or do not track mechanisms, including general web browser “Do Not Track” settings and/or signals.
+In addition, WEN Token does not monitor, recognize, or honor any opt-out or do not track mechanisms, including general web browser “Do Not Track” settings and/or signals.
 
 ## Notice to Nevada Residents
 
@@ -93,4 +93,4 @@ This Privacy Policy is effective as of the date stated at the top of this Privac
 
 ## How to Contact Us
 
-If you have questions about this Privacy Policy, please contact WEN Staking via e-mail at info@wentoken.org with “Privacy Policy” in the subject line. 
+If you have questions about this Privacy Policy, please contact WEN Token via e-mail at info@wentoken.org with “Privacy Policy” in the subject line. 
