--- a/privacy.mdx
+++ b/privacy.mdx
@@ -3,48 +3,46 @@ title: "Privacy Policy"
 description: "This is the Privacy Policy for WEN Token"
 ---
 
-We at WEN Token, LLC (“WEN Token,” “we,” “us,” or “our”) have created this privacy policy (this “Privacy Policy”) because we know that you care about how information you provide to us is used and shared.  This Privacy Policy relates to the information collection and use practices of WEN Token in connection with our Website and $WEN Token Staking.     
+We at WEN Token, LLC (“WEN Token,” “we,” “us,” or “our”) have created this privacy policy (this “Privacy Policy”) because we know that you care about how information you provide to us is used and shared.  This Privacy Policy relates to the information collection and use practices of WEN Token in connection with our Website.     
 
-By visiting our Website, and/or participating in $WEN Token Staking, you are agreeing to the terms of this Privacy Policy and the accompanying Terms of Use [add link].  
+By visiting our Website, you are agreeing to the terms of this Privacy Policy and the accompanying Terms of Use - https://docs.wentoken.org/token-website-terms.  
 
 Capitalized terms not defined in this Privacy Policy shall have the meaning set forth in the Terms of Use. 
 
-	
 ## The Information We Collect and/or Receive
 
 In the course of operating the Website and/or interacting with you, WEN Token will collect (and/or receive) the following types of information. You authorize us to collect and/or receive such information. 
+
 
 ### 1. Contact Information
 
 If you contact us through our Website, or in any other matter, you may be requested to provide us with certain personal information about yourself, such as your name, e-mail address, or phone number (“Contact Information”). 
 
-### 2. Wallet Information
 
-If you would like to participate in $WEN Token Staking, you will need to provide us with certain information related to the Wallet in which you maintain the $WEN Tokens that you would like to stake (“Wallet ID”). We will only use your Wallet ID in order to facilitate staking of your $WEN Tokens and not share your Wallet ID with any third parties other than for such purposes.
+### 2. Reserved
 
 ### 3. Other Information
 
-In addition to the Contact Information and your Wallet ID, we may collect or receive additional information (collectively, the “Other Information”).  Such Other Information may include:
+In addition to the Contact Information, we may collect or receive additional information (collectively, the “Other Information”).  Such Other Information may include:
 
-	**a. From Your Activity**.  In an ongoing effort to improve the Website, we automatically collect certain information, including, without limitation:
+	a.	From Your Activity.  In an ongoing effort to improve the Website, we automatically collect certain information, including, without limitation:
 		- IP addresses, which may consist of a static or dynamic IP address and will sometimes point to a specific identifiable computer or device; browser type and language; referring and exit pages and URLs; date and time; amount of time spent on particular pages; what sections of the Website you visit; and similar data;
 		- Information about your device, including the type of device; universally unique ID (“UUID”); advertising identifier (“IDFA”); MAC address; operating system and version (e.g., iOS, Android or Windows); carrier and country location; hardware and processor information (e.g., storage, chip speed, camera resolution, NFC enabled); network type (WiFi, 3G, 4G, LTE); and similar data; and
 		- Activity and usage information, including pages viewed, preferences, session lengths, and similar data. 
 
-	**b. From Cookies**.  We collect information using “cookie” technology.  Cookies are small packets of data that a website stores on your computer’s or mobile device’s hard drive so that your computer will “remember” information about your visit.  We may use both session cookies (which expire once you close your web browser) and persistent cookies (which stay on your computer until you delete them) to help us collect Other Information and to enhance your experience using the Website.  If you do not want us to place a cookie on your hard drive, you may be able to turn that feature off on your computer or mobile device.  Please consult your Internet browser’s documentation for information on how to do this and how to delete persistent cookies.  However, if you decide not to accept cookies from us, the Website may not function properly.
+	b.	From Cookies.  We collect information using “cookie” technology.  Cookies are small packets of data that a website stores on your computer’s or mobile device’s hard drive so that your computer will “remember” information about your visit.  We may use both session cookies (which expire once you close your web browser) and persistent cookies (which stay on your computer until you delete them) to help us collect Other Information and to enhance your experience using the Website.  If you do not want us to place a cookie on your hard drive, you may be able to turn that feature off on your computer or mobile device.  Please consult your Internet browser’s documentation for information on how to do this and how to delete persistent cookies.  However, if you decide not to accept cookies from us, the Website may not function properly.
 
-	**c. Third-Party Analytics**.  We use third-party analytics services (such as Google Analytics) to evaluate your use of the Website, compile reports on activity, collect demographic data, analyze performance metrics, and collect and evaluate other information relating to the Website and mobile and Internet usage.  These third parties use cookies and other technologies to help analyze and provide us the data.  By accessing and using the Website, you consent to the processing of data about you by these analytics providers in the manner and for the purposes set out in this Privacy Policy.
+	c.	Third-Party Analytics.  We use third-party analytics services (such as Google Analytics) to evaluate your use of the Website, compile reports on activity, collect demographic data, analyze performance metrics, and collect and evaluate other information relating to the Website and mobile and Internet usage.  These third parties use cookies and other technologies to help analyze and provide us the data.  By accessing and using the Website, you consent to the processing of data about you by these analytics providers in the manner and for the purposes set out in this Privacy Policy.
 
-For more information on Google Analytics, including how to opt out from certain data collection, please visit https://www.google.com/analytics.  Please be advised that if you opt out of any service, you may not be able to use the full functionality of the Website.
+	For more information on Google Analytics, including how to opt out from certain data collection, please visit https://www.google.com/analytics.  Please be advised that if you opt out of any service, you may not be able to use the full functionality of the Website.
 
 ## Accessing and Modifying Information and Communication Preferences
 
 You may manage your receipt of marketing and non-transactional communications by clicking on the “unsubscribe” link located on the bottom of any WEN Token marketing e-mail.  We will use commercially reasonable efforts to process such requests in a timely manner.  You should be aware, however, that it is not always possible to completely remove or modify information in our subscription databases.  Users cannot opt out of receiving transactional e-mails related to their transactions with WEN Token.
 
-
 ## How We Use and Share the Information   
 
-You authorize us to use your Contact Information, Wallet ID, and Other Information (collectively, the “Information”) that you provide us in order to provide and improve the Website and $WEN Token staking; to solicit your feedback; and to inform you about our products and services and those of our partners.     
+You authorize us to use your Contact Information, Wallet ID, and Other Information (collectively, the “Information”) that you provide us in order to provide and improve the Website; to solicit your feedback; and to inform you about our products and services and those of our partners.     
 
 You also authorize us to use and/or share Information as described below.
 
@@ -58,15 +56,13 @@ You also authorize us to use and/or share Information as described below.
 
 	- To the extent permitted by law, we may also disclose the Information: (i) when required by law, court order, or other government or law enforcement authority or regulatory agency; or (ii) whenever we believe that disclosing such Information is necessary or advisable, for example, to protect the rights, property, or safety of WEN Token or others.
 
-
-
 ## How We Protect the Information
 
 We take commercially reasonable steps to protect the Information from loss, misuse, and unauthorized access, disclosure, alteration, or destruction.  Please understand, however, that no security system is impenetrable.  We cannot guarantee the security of our databases, nor can we guarantee that the Information that you supply will not be intercepted while being transmitted to and from us over the Internet. In particular, e-mail sent to or from the Website may not be secure, and you should therefore take special care in deciding what information you send to us via e-mail.  
 
 ## Important Notices to Non-US Residents
 
-The Website and its servers are operated in United States.   Please be aware that your Information may be transferred to, processed, maintained, and used on computers, servers, and systems located outside of your state, province, country, or other governmental jurisdiction where the privacy laws may not be as protective as those in your jurisdiction.  If you are located outside of Unites States and choose to use the Website and/or participate in $WEN Token Staking, you consent to any transfer and processing of your personal information in accordance with this Privacy Policy, and you do so at your own risk.
+The Website and its servers are operated in United States.   Please be aware that your Information may be transferred to, processed, maintained, and used on computers, servers, and systems located outside of your state, province, country, or other governmental jurisdiction where the privacy laws may not be as protective as those in your jurisdiction.  If you are located outside of Unites States and choose to use the Website, you consent to any transfer and processing of your personal information in accordance with this Privacy Policy, and you do so at your own risk.
 
 ## External Websites
 
@@ -88,8 +84,7 @@ We do not sell your personal information as defined under Nevada law. Nonetheles
 
 ## Changes to This Privacy Policy
 
-This Privacy Policy is effective as of the date stated at the top of this Privacy Policy.  We may change this Privacy Policy from time to time.  Any such changes will be posted on the Website. By accessing the Website and/or participating in $WEN Token Staking after we make any such changes to this Privacy Policy, you are deemed to have accepted such changes.  Please be aware that, to the extent permitted by applicable law, our use of the Information is governed by the Privacy Policy in effect at the time we collect the Information.  Please refer back to this Privacy Policy on a regular basis. 
-
+This Privacy Policy is effective as of the date stated at the top of this Privacy Policy.  We may change this Privacy Policy from time to time.  Any such changes will be posted on the Website. By accessing the Website after we make any such changes to this Privacy Policy, you are deemed to have accepted such changes.  Please be aware that, to the extent permitted by applicable law, our use of the Information is governed by the Privacy Policy in effect at the time we collect the Information.  Please refer back to this Privacy Policy on a regular basis. 
 
 ## How to Contact Us
 
