--- a/tokenomics.mdx
+++ b/tokenomics.mdx
@@ -3,11 +3,40 @@ title: Tokenomics
 description: 'This is a list of all the contracts for WEN Token'
 ---
 
-<CardGroup cols={1}>
+![Search](/images/tokenomics.png)
+
+
+The first step to world-class documentation is setting up your editing environnments. The first step to world-class documentation is setting up your editing environnments. The first step to world-class documentation is setting up your editing environnments.
+
+<CardGroup cols={2}>
   <Card
-    title="Contract 1"
-    href="https://mintlify.com/docs/settings/global"
+    title="10% Staking Pool"
   >
     Customize your docs to your company's colors and brands.
+  </Card>
+  <Card
+    title="10% CEXes/DEXes"
+  >
+    Automatically generate endpoints from an OpenAPI spec.
+  </Card>
+  <Card
+    title="10% DAO Treasury"
+  >
+    Build interactive features and designs to guide your users.
+  </Card>
+  <Card
+    title="10% Marketing"
+  >
+    Check out our showcase of our favorite documentation.
+  </Card>
+  <Card
+    title="20% Airdrop"
+  >
+    Build interactive features and designs to guide your users.
+  </Card>
+  <Card
+    title="40% Initial LP"
+  >
+    Check out our showcase of our favorite documentation.
   </Card>
 </CardGroup>
