--- a/contracts.mdx
+++ b/contracts.mdx
@@ -3,9 +3,30 @@ title: Contracts
 description: 'This is a list of all the contracts for WEN Token'
 ---
 
+
+### Token
 <CardGroup cols={1}>
   <Card
-    title="Contract 1"
+    title="Ethereum"
+    href="https://mintlify.com/docs/settings/global"
+  >
+    Customize your docs to your company's colors and brands.
+  </Card>
+
+  <Card
+    title="Polygon"
+    href="https://mintlify.com/docs/settings/global"
+  >
+    Customize your docs to your company's colors and brands.
+  </Card>
+</CardGroup>
+
+
+## Vesting
+
+<CardGroup cols={1}>
+  <Card
+    title="Ethereum"
     href="https://mintlify.com/docs/settings/global"
   >
     Customize your docs to your company's colors and brands.
