--- a/introduction.mdx
+++ b/introduction.mdx
@@ -38,4 +38,18 @@ The first step to world-class documentation is setting up your editing environnm
   >
     Check out our showcase of our favorite documentation.
   </Card>
+  <Card
+    title="Airdrop"
+    icon="box"
+    href="/airdrop"
+  >
+    Build interactive features and designs to guide your users.
+  </Card>
+  <Card
+    title="Vesting"
+    icon="unlock"
+    href="/vesting"
+  >
+    Check out our showcase of our favorite documentation.
+  </Card>
 </CardGroup>
