hmw-terms-update

--- a/token-website-terms.mdx
+++ b/token-website-terms.mdx
@@ -9,7 +9,7 @@ We provide access to our Website subject to the following Terms of Use, which ma
 
 Capitalized terms not defined in these Terms of Use shall have the meaning set forth in our Privacy Policy.
 
-If you would like to receive or purchase WEN tokens, please see our WEN Tokens Issuance Terms and Conditions, which are available here - [https://docs.wentoken.org/staking-terms].  Your receipt or purchase of WEN Token is governed by the WEN Tokens Issuance Terms and Conditions. 
+If you would like to receive or purchase WEN tokens, please see our WEN Tokens Issuance Terms and Conditions, which are available here - https://docs.wentoken.org/token-issuance-terms.  Your receipt or purchase of WEN Token is governed by the WEN Tokens Issuance Terms and Conditions. 
 
 **THE SECTIONS BELOW TITLED “BINDING ARBITRATION” AND “CLASS ACTION WAIVER” CONTAIN A BINDING ARBITRATION AGREEMENT AND CLASS ACTION WAIVER.  THEY AFFECT YOUR LEGAL RIGHTS. PLEASE READ THEM.**
 
