hmw-terms-update

--- a/airdrop.mdx
+++ b/airdrop.mdx
@@ -33,3 +33,223 @@ WenMint is forming a decentralized community called WEN DAO and we're inviting e
     To protect the community from dumpers, all airdrop and marketing allocations will vest continously over 3 months. There is no cliff. Log in to the WEN Token app at anytime to see how many vested tokens you have available and claim when gas isn't f**ked.
   </Card>
 </CardGroup>
+
+
+## Snapshot Communites
+
+This is a list of all the NFT communities that were included in the airdrop snapshot
+
+<CardGroup cols={2}>
+  <Card
+    title=""
+  >
+    AApes
+
+    AAQueens
+
+    Aloha Aina Collection
+
+    Apes Together Strong
+
+    Apple Ape Club
+
+    Arabian Camels
+
+    Astro Bums
+
+    BackpackBoyz Club 
+
+    BaeApes Genesis
+
+    Balloon Town NFT
+
+    Bearded Kings
+
+    Blind Bunnies
+
+    BRAQ FRNDS
+
+    Casa De Luna
+
+    Chimpsons Comic Origins 
+
+    CITYSCAPES
+
+    Cris Cray Music Album
+
+    Cris Cray Music Co NFT
+
+    Crypto Cannabis
+
+    DeluxeGoat Mint Pass
+
+    DeluxeGoats
+
+    Digital Dolphins
+
+    Disowned Gods
+
+    Dizzy Demons
+
+    Dizzy Dragons
+
+
+    EcoNation Genesis Land
+
+    Elephants of ETHland
+
+    Evolved Bulls
+
+    EXONIKS
+
+    Farmacy Fantoms
+
+    G3Vrse Pass
+
+    Good Godz
+
+    Grandpa Apes
+
+    Guava Girls
+
+    h8rs
+
+    Hazy Hooliganz Genesis
+
+    Hijabi Queens
+
+    Howdy Partner NFT
+
+    Invisible Labs LLC Collection #1
+
+    JoeRian Music VIP
+
+    Joey Capitano x Nessy The Rilla - Big Talk
+
+    Kush Kingdom Ape Club
+
+    Lazy Ape Mutants
+
+    Lazy Ape Yacht Club
+
+    Lit Pass
+
+    Little Degens NFT
+
+    LittleMutants
+
+    LXVEWORLD
+
+    M4Rabbit
+
+    McFlys NFT Collection
+
+    Meta Comedy Club
+  </Card>
+
+  <Card
+    title=""
+  >
+    Meta Queen
+
+    MetaDrag
+
+    Midwest Boy LP by Joe Rian
+
+    MRDRVRS
+
+    Mutant Musks
+
+    NFA Pass Diamond
+
+    NFA Pass Gold
+
+    NFA Pass Platinum
+
+    NFA'S ToonyMoney by ToonyMania
+
+    NFTMaps Land
+
+    OG Bulls
+
+    Omniguards
+
+    Oozoids
+
+    Outside Yacht Club
+
+    PandaCubz
+
+    Paradise Trippies
+
+    Pigs Of Anarchy
+
+    PIXELATED (Digital Feelings)
+
+    Professor Elon Rocket Factory
+
+    PROJECT 41K EXOTICS
+
+    Project Fate NFT
+
+    Rae Isla's Rocks
+
+    Rae Isla's Web3 Tour
+
+    Ralph's Country Club
+
+    RektGuy
+
+    Respected Rhinos Club
+
+    RockYourSocks321-I Wont Break by Jessica Aimee Kishner
+
+    Samot Club
+
+    Snuggle Buddies Genesis
+
+    Snuggle Buddies Unleashed
+
+    StreamPunkZ
+
+    THE CAPITANO COLLECTIVE
+
+    The Grifters
+
+    The Grifters Party Pass
+
+    The Hollow Squad NFT
+
+    The Lunar Module
+
+    The Lunar Specimen
+
+    The Mixtapes NFT
+
+    The Sports Initiative
+
+    The Two Boys
+
+    Twittah
+
+    Violetta Moonshot
+
+    War Dogs Gun Club
+
+    Watch and See
+
+    Wayward Weenies Paradigm
+
+    WenMint MintPass
+
+    Women's Creative Collective
+
+    Zeuss Bingo
+
+    Zeuss World Genesis
+
+    zipsharks Nft
+
+    Zom Pets
+  </Card>
+</CardGroup>
