hmw-full-update

--- a/airdrop.mdx
+++ b/airdrop.mdx
@@ -1,9 +1,9 @@
 ---
 title: Airdrop
-description: 'This is a list of all the contracts for WEN Token'
+description: "WenMint is forming a decentralized community called WEN DAO and we're inviting every NFT community we've worked with in the last two years to join."
 ---
 
-WenMint is forming a decentralized community called WEN DAO and we're inviting every NFT community we've worked with in the last two years to join.
+
 
 <CardGroup cols={1}>
   <Card
