--- a/branding.mdx
+++ b/branding.mdx
@@ -3,13 +3,12 @@ title: Media Kit
 description: 'Here is the official style guide for WEN Token and the available media assets.'
 ---
 
-## Brand Style Guide
 ![BrandStyleGuide](/images/branding.png)
 
 <CardGroup cols={1}>
   <Card
     title="Download Full Media Kit"
-    href="https://drive.google.com/file/d/1ZdDzVBJZLqCUpNe2d1p_-dyafbDbnsHk/view?usp=share_link"
+    href="https://wentoken-download.s3.amazonaws.com/branding.zip"
   >
   </Card>
   
