--- a/tokenomics.mdx
+++ b/tokenomics.mdx
@@ -1,6 +1,6 @@
 ---
 title: Tokenomics
-description: 'This is a list of all the contracts for WEN Token'
+description: 'Stealth fair launch. No team allocation. No pre-sale.'
 ---
 
 ![Search](/images/tokenomics.png)
