--- a/introduction.mdx
+++ b/introduction.mdx
@@ -3,13 +3,10 @@ title: Introduction
 description: 'Welcome to your new Mintlify documentation. Get started making it yours.'
 ---
 
-![Search](/images/search.png)
+![WEN](/images/wen.png)
 
-## Setting up
 
-The first step to world-class documentation is setting up your editing environnments.
-
-<CardGroup cols={2}>
+<CardGroup cols={1}>
   <Card
     title="Tokenomics"
     icon="coins"
@@ -25,31 +22,10 @@ The first step to world-class documentation is setting up your editing environnm
     Automatically generate endpoints from an OpenAPI spec.
   </Card>
   <Card
-    title="Staking"
-    icon="lock"
-    href="/stakings"
-  >
-    Build interactive features and designs to guide your users.
-  </Card>
-  <Card
-    title="Utility"
-    icon="screwdriver-wrench"
-    href="/utility"
-  >
-    Check out our showcase of our favorite documentation.
-  </Card>
-  <Card
     title="Airdrop"
     icon="box"
     href="/airdrop"
   >
     Build interactive features and designs to guide your users.
-  </Card>
-  <Card
-    title="Vesting"
-    icon="unlock"
-    href="/vesting"
-  >
-    Check out our showcase of our favorite documentation.
   </Card>
 </CardGroup>
